# src/modules/BloodInventory/BloodSchema.ts
@@ -5,7 +5,7 @@ export const NewBloodSchema = z.object({
   donorId: z.number().openapi({ example: 1 }),
   bloodType: z
     .string()
-    .min(1, "Blood type is required")
+    .default("UNKNOWN") // Provide a default value
     .openapi({ example: "O_POS" }),
   barcode: z
     .string()
@@ -19,42 +19,59 @@ export const NewBloodSchema = z.object({
     .openapi({ example: "2023-12-15T10:00:00.000Z" }),
   expirationDate: z
     .string()
-    .refine((dateStr) => !isNaN(Date.parse(dateStr)), {
+    .default("") // Provide a default value
+    .refine((dateStr) => dateStr === "" || !isNaN(Date.parse(dateStr)), {
       message: "Invalid date format",
     })
     .openapi({ example: "2024-01-15T10:00:00.000Z" }),
   storageStatus: z
     .enum(["AVAILABLE", "RESERVED", "EXPIRED"])
+    .default("AVAILABLE") // Provide a default value
     .openapi({ example: "AVAILABLE" }),
-  quantity: z
+  quantityml: z
     .number()
     .min(1, "Quantity must be at least 1")
-    .openapi({ example: 5 }),
+    .openapi({ example: 500 }),
+  stockLevel: z
+    .number()
+    .default(0) // Provide a default value
+    .openapi({ example: 10 }),
+  hospitalId: z
+    .number()
+    .default(0) // Provide a default value
+    .openapi({ example: 1 }),
+  collectorId: z
+    .number()
+    .default(0) // Provide a default value
+    .openapi({ example: 2 }),
 });
 
 // Schema for updating an existing blood inventory record
 export const UpdateBloodSchema = z.object({
   donorId: z.number().optional(),
-  bloodType: z.string().min(1).optional(),
+  bloodType: z.string().optional(),
   barcode: z.string().min(1).optional(),
   donationDate: z
     .string()
-    .refine((dateStr) => !isNaN(Date.parse(dateStr)), {
+    .optional()
+    .refine((dateStr) => dateStr === undefined || !isNaN(Date.parse(dateStr)), {
       message: "Invalid date format",
-    })
-    .optional(),
+    }),
   expirationDate: z
     .string()
-    .refine((dateStr) => !isNaN(Date.parse(dateStr)), {
+    .optional()
+    .refine((dateStr) => dateStr === undefined || !isNaN(Date.parse(dateStr)), {
       message: "Invalid date format",
-    })
-    .optional(),
+    }),
   storageStatus: z.enum(["AVAILABLE", "RESERVED", "EXPIRED"]).optional(),
-  quantity: z
+  quantityml: z
     .number()
     .min(1, "Quantity must be at least 1")
     .optional()
-    .openapi({ example: 5 }),
+    .openapi({ example: 500 }),
+  stockLevel: z.number().optional(),
+  hospitalId: z.number().optional(),
+  collectorId: z.number().optional(),
 });
 
 // TypeScript types for services or controllers
